# tracing-init

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md
.github/: readme.md
.github/workflows/: ci.yml
docs/: beacon.md  medium-article.md
docs/superpowers/plans/: 2026-03-28-otel-and-gelf-enrichment.md
docs/superpowers/specs/: 2026-03-28-otel-and-gelf-enrichment-design.md
examples/: console_only.rs  full_toml.logging.toml  full_toml.rs  otel_resilient.rs
src/: config.rs  dest_config.rs  gelf.rs  guard.rs  lib.rs  traceparent.rs  types.rs
src/otel/: beacon.rs  circuit_breaker.rs  logs.rs  mod.rs  traces.rs
src/tests/: config_tests.rs  dest_config_tests.rs  gelf_enrichment_tests.rs  guard_tests.rs  integration_tests.rs  mod.rs  types_tests.rs
