[package]
name = "tracing-init"
version = "0.1.0"
edition = "2021"
description = "Simple tracing subscriber initialization with TOML config, file rotation, and GELF server output"
license = "MIT"
repository = "https://github.com/yuvalrakavy/tracing-init"
keywords = ["tracing", "logging", "gelf", "toml", "subscriber"]
categories = ["development-tools::debugging"]

[dependencies]
tracing = { version = "0.1.41", features = ["log"] }
tracing-subscriber = { version = "0.3.20", features = ["env-filter", "fmt", "json"] }
tracing-appender = "0.2"
hostname = "0.4"
serde_json = "1"
toml = "0.8"
serde = { version = "1", features = ["derive"] }

[dev-dependencies]
tempfile = "3"
