[package]
name = "tracing-init"
version = "0.2.0"
edition = "2021"
description = "Simple tracing subscriber initialization with TOML config, file rotation, GELF, and OpenTelemetry support"
license = "MIT"
repository = "https://github.com/yuvalrakavy/tracing-init"
keywords = ["tracing", "logging", "gelf", "opentelemetry", "subscriber"]
categories = ["development-tools::debugging"]

[features]
default = ["config", "file", "gelf"]
config = ["dep:toml", "dep:serde"]
file = ["dep:tracing-appender"]
gelf = ["dep:serde_json", "dep:hostname"]
otel = [
    "dep:opentelemetry",
    "dep:opentelemetry_sdk",
    "dep:opentelemetry-otlp",
    "dep:tracing-opentelemetry",
    "dep:opentelemetry-appender-tracing",
    "dep:socket2",
    "dep:tokio",
    "dep:futures-util",
]
otel-grpc = ["otel", "opentelemetry-otlp/grpc-tonic"]

[dependencies]
tracing = { version = "0.1", features = ["log"] }
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt", "json"] }
bitflags = "2"

# Optional - config
toml = { version = "0.8", optional = true }
serde = { version = "1", features = ["derive"], optional = true }

# Optional - file
tracing-appender = { version = "0.2", optional = true }

# Optional - gelf
serde_json = { version = "1", optional = true }
hostname = { version = "0.4", optional = true }

# Optional - otel
opentelemetry = { version = "0.28", optional = true }
opentelemetry_sdk = { version = "0.28", features = ["rt-tokio"], optional = true }
opentelemetry-otlp = { version = "0.28", features = ["http-json"], optional = true }
tracing-opentelemetry = { version = "0.29", optional = true }
opentelemetry-appender-tracing = { version = "0.28", optional = true }
socket2 = { version = "0.5", features = ["all"], optional = true }
tokio = { version = "1", features = ["net", "time", "rt"], optional = true }
futures-util = { version = "0.3", optional = true }

[dev-dependencies]
tempfile = "3"
